fix: corrige request por id
